# bankid-rs

./: Cargo.toml
examples/: authenticate.rs  sign.rs
src/: client.rs  error.rs  lib.rs  tls.rs
src/config/: mod.rs
src/http/: client.rs
src/model/: authenticate.rs  cancel.rs  collect.rs  mod.rs  sign.rs
tests/: test.rs
