[package]
name = "bankid"
version = "0.1.0"
authors = ["Nicklas Wallgren <nicklas.wallgren@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "BankID API SDK"
homepage = "https://github.com/NicklasWallgren/bankid-rs"
repository = "https://github.com/NicklasWallgren/bankid-rs"
keywords = ["bankid","api", "sdk"]

[dependencies]
async-trait = { version = "0.1.50", optional = true }
base64 = "0.13.0"
reqwest = { version = "0.11.3", default-features = false, features = ["json", "socks", "blocking"] }
tokio = { version = "1.7", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.25"
url = "2.2.2"
pem = "0.8.3"
openssl = { version = "0.10.35", optional = true }
webpki-roots =  "0.22"

[dev-dependencies]
env_logger = "0.8.3"
futures = "0.3.5"
rand = "0.8.3"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
# rustls-tls = ["reqwest/rustls-tls"]
