[package]
name = "bankid"
version = "0.3.0"
authors = ["Brendan Molloy <brendan@necessary.nu>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "BankID API SDK"
homepage = "https://github.com/necessary-nu/bankid-rs"
repository = "https://github.com/necessary-nu/bankid-rs"
keywords = ["bankid", "api", "sdk"]

[dependencies]
base64 = "0.22.0"
reqwest = { version = "0.11.16", default-features = false, features = ["json", "socks", "rustls-tls", "rustls-tls-webpki-roots"] }
tokio = { version = "1.27.0" }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
url = "2.3.1"
pem = "3.0.1"

[dev-dependencies]
env_logger = "0.11.3"
futures = "0.3.28"
rand = "0.8.5"
